fix header z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,5 +5,5 @@ app-header {
   justify-content: center;
   position: fixed;
   top: 0;
-  z-index: 50000;
+  z-index: 999999;
 }
