--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -97,8 +97,7 @@ nav {
 .change-language {
   cursor: pointer;
   font-size: 24px;
-  display: flex;
-  gap: 10px;
+  padding: 10px;
 }
 
 .toggle-language {
